# m1_project_agne

./: .gitignore  pyproject.toml
m1_project_agne/: __init__.py  krepsinis.py  main.py
tests/: test.py
