[tool.poetry]
name = "m1-project-agne"
version = "0.1.0"
description = ""
authors = ["agnesema <sanara44@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
